fixed overlapping chid and line in menu

--- a/style.css
+++ b/style.css
@@ -513,7 +513,7 @@ nav .navigation-socials {
     height: 60px;
     background: #fcd53a;
     padding-left: 0px;
-    float: right;
+    float: left;
 }
 
 nav .navigation-socials:before {
@@ -2692,6 +2692,7 @@ dl.gallery-columns-9 .wp-caption-text {
 	
 	.nav-container.responsivemenu li {
 		display:block !important;
+		clear:both;
 	}
 
     .navigation-menu {
